Add styles to recipes
Recipes were not styled yet, now they are more appealing.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="../style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Lasagna</h1>
+    <h1 class="title">LASAGNA</h1>
     <img src="../images/lasagna.png" alt="Lasagna" height="480" width="480" />
     <h2>Description</h2>
     <p>
