--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sushi</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="../style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Sushi</h1>
+    <h1 class="title">SUSHI</h1>
     <img src="../images/sushi.jpeg" alt="Sushi" height="480" width="480" />
     <h2>Description</h2>
     <p>Sushi is a traditional japanese dish made with raw fish and rice</p>
