--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Odin Recipes</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">ODIN RECIPES</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
     <a href="recipes/sushi.html">Sushi</a>
     <a href="recipes/steak.html">Steak</a>
