--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Steak</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="../style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Steak</h1>
+    <h1 class="title">STEAK</h1>
     <img src="../images/steak.jpg" alt="Steak" height="480" width="480" />
     <h2>Description</h2>
     <p>Steak is just a hunk of meat barely cooked</p>
